[吊り意識向上 [ シェリマ (マッドてるてる) ]\nSHR対応_推奨11人"]追加

--- a/Description.jsonc
+++ b/Description.jsonc
@@ -88,6 +88,85 @@
         {"id":"600501","selection":"1"}, // シェリマ : オン
         {"id":"600601","selection":"1"} // アドミン禁止 : オン
       ]
+    },
+    {
+      "title":"吊り意識向上 [ シェリマ (マッドてるてる) ]\nSHR対応_推奨11人",
+      "MeetingButtonNum":"1",
+      "MeetingButtonCooldown":"15",
+      "VoteTime":"180",
+      "PlayerSpeed":"1.25",
+      "CrewVision":"0.5",
+      "ImpostorVision":"1.75",
+      "KillCoolTime":"30",
+      "CommonTask":"2",
+      "LongTask":"3",
+      "ShortTask":"6",
+      "ModOptions":[
+        {"id":"100200","selection":"0"}, // インポスター役職人数 : 0
+        {"id":"100300","selection":"0"}, // 第三陣営役職人数 : 0
+        {"id":"100400","selection":"2"}, // クルーメイト役職人数 : 2
+        {"id":"100500","selection":"0"}, // インポスター幽霊役職人数 : 0
+        {"id":"100600","selection":"0"}, // 第三陣営幽霊役職人数 : 0
+        {"id":"100700","selection":"0"}, // クルーメイト幽霊役職人数 : 0
+
+        {"id":"100900","selection":"0"}, // PC以外をキックする : オフ
+        {"id":"101000","selection":"0"}, // アガルタ : オフ
+        {"id":"101200","selection":"1"}, // モード設定 : オン
+        {"id":"101300","selection":"1"}, // モード : SuperHostRoles
+
+        {"id":"101900","selection":"1"}, // マップの設定 : オン
+        {"id":"102000","selection":"1"}, // 情報機器制限の設定 : オン
+        {"id":"102100","selection":"1"}, // 使用可能/不可能 の設定 : オン
+        {"id":"102101","selection":"0"}, // アドミンが使える : オフ
+        {"id":"102103","selection":"1"}, // バイタル・ドアログが使える : オン
+        {"id":"102104","selection":"1"}, // カメラが使える : オン
+
+        {"id":"201100","selection":"10"}, // シリアルキラー : 100%
+        {"id":"201101","selection":"0"}, // 人数 : 1
+        {"id":"201102","selection":"16"}, // 自殺までの時間 : 40
+        {"id":"201103","selection":"8"}, // キルクールタイム : 20
+        {"id":"201104","selection":"1"}, // 会議に入るとリセットされる : オン
+
+        {"id":"201900","selection":"10"}, // イビルシーア : 100%
+        {"id":"201901","selection":"0"}, // 人数 : 1人
+        {"id":"201902","selection":"0"}, // モード : 死の点滅 & 霊魂が見える
+        {"id":"201903","selection":"0"}, // 時間経過で霊魂が消える : オフ
+        {"id":"201904","selection":"3"}, // 霊魂が見える時間 : 15
+        {"id":"201905","selection":"0"}, // マッドメイトを作れる : オフ
+        {"id":"201906","selection":"1"}, // シーアとしてのイビルシーアの固有能力を設定するか : オン
+        {"id":"201907","selection":"1"}, // 死の点滅の色をクルーのボディカラー依存にするか : オン
+        {"id":"201908","selection":"1"}, // ボディカラーの情報を文字でも表示するか : オン
+        {"id":"201909","selection":"0"}, // 死者ボディカラーの表示方法 : 色の詳細がわかる
+        {"id":"201910","selection":"1"}, // 霊魂の色に死者の色を反映させるか : オン
+
+        {"id":"400000","selection":"10"}, // シェリフ : 100%
+        {"id":"400001","selection":"0"}, // 人数 : 1
+        {"id":"400002","selection":"12"}, // キルクールタイム : 32.5
+        {"id":"400003","selection":"2"}, // 最大キル数 : 3
+        {"id":"400004","selection":"0"}, // 誤射した時も対象を殺す : オフ
+        {"id":"400005","selection":"1"}, // インポスターをキルできる : オン
+        {"id":"400006","selection":"1"}, // マッド系をキルできる : オン
+        {"id":"400007","selection":"1"}, // 第三陣営をキルできる : オン
+        {"id":"400008","selection":"1"}, // ジャッカルフレンズをキルできる : オン
+        {"id":"400009","selection":"0"}, // ラバーズをキルできる : オフ
+        {"id":"400010","selection":"0"}, // クラードをキルできる : オフ
+
+        {"id":"401200","selection":"10"}, // マッドてるてる : 100%
+        {"id":"401201","selection":"0"}, // 人数 : 1
+        {"id":"401202","selection":"1"}, // ベントに入れる : オン
+        {"id":"401203","selection":"1"}, // インポスターの視界 : オン
+        {"id":"401204","selection":"1"}, // 能力発動に必要なタスク数を固有で設定するかオン
+        {"id":"401205","selection":"2"}, // 通常タスク : 2
+        {"id":"401206","selection":"7"}, // ショートタスク : 7
+        {"id":"401207","selection":"3"}, // ロングタスク : 3
+        {"id":"401208","selection":"1"}, // タスクを完了しないと勝利できない : オン
+        {"id":"401209","selection":"1"}, // 狂信能力を有するか : オン
+        {"id":"401210","selection":"1"}, // 能力発動に必要なタスク数を総タスク数に対する割合にするか : オン
+        {"id":"401211","selection":"1"}, // 能力が発動するタスク量(全タスクに対する割合) : 25%
+
+        {"id":"600501","selection":"1"}, // シェリマ : オン
+        {"id":"600601","selection":"1"} // アドミン禁止 : オン
+      ]
     }
   ]
 }
