--- a/Description.jsonc
+++ b/Description.jsonc
@@ -167,6 +167,62 @@
         {"id":"600501","selection":"1"}, // シェリマ : オン
         {"id":"600601","selection":"1"} // アドミン禁止 : オン
       ]
+    },
+    {
+      "title":"ジャッカル村 (シンプル) \nSHR対応_推奨:12人",
+      "MeetingButtonNum":"1",
+      "MeetingButtonCooldown":"15",
+      "VoteTime":"210",
+      "PlayerSpeed":"1.25",
+      "CrewVision":"0.5",
+      "ImpostorVision":"1.75",
+      "KillCoolTime":"30",
+      "CommonTask":"2",
+      "LongTask":"3",
+      "ShortTask":"6",
+      "ModOptions":[
+        {"id":"100200","selection":"0"}, // インポスター役職人数 : 0
+        {"id":"100300","selection":"1"}, // 第三陣営役職人数 : 1
+        {"id":"100400","selection":"2"}, // クルーメイト役職人数 : 2
+        {"id":"100500","selection":"0"}, // インポスター幽霊役職人数 : 0
+        {"id":"100600","selection":"0"}, // 第三陣営幽霊役職人数 : 0
+        {"id":"100700","selection":"0"}, // クルーメイト幽霊役職人数 : 0
+
+        {"id":"100900","selection":"0"}, // PC以外をキックする : オフ
+        {"id":"101000","selection":"0"}, // アガルタ : オフ
+        {"id":"101200","selection":"1"}, // モード設定 : オン
+        {"id":"101300","selection":"1"}, // モード : SuperHostRoles
+
+        {"id":"300000","selection":"10"}, // ジャッカル : 100%
+        {"id":"300001","selection":"0"}, // 人数 : 1
+        {"id":"300002","selection":"11"}, // ジャッカルのキルクールタイム : 30
+        {"id":"300003","selection":"1"}, // ベントを使える : オン
+        {"id":"300004","selection":"0"}, // サボタージュが使える : オフ
+        {"id":"300005","selection":"1"}, // インポスターの視界 : オン
+        {"id":"300006","selection":"0"}, // ジャッカルフレンズを作れる : オフ
+        {"id":"300007","selection":"0"}, // ジャッカルがサイドキックを作れる : オフ
+        {"id":"300008","selection":"11"}, // サイドキックのクールタイム : 30
+        {"id":"300009","selection":"0"}, // 新ジャッカルがサイドキックを作れる : オフ
+
+        {"id":"400000","selection":"10"}, // シェリフ : 100%
+        {"id":"400001","selection":"0"}, // 人数 : 1
+        {"id":"400002","selection":"11"}, // キルクールタイム : 30
+        {"id":"400003","selection":"2"}, // 最大キル数 : 3
+        {"id":"400004","selection":"0"}, // 誤射した時も対象を殺す : オフ
+        {"id":"400005","selection":"1"}, // インポスターをキルできる : オン
+        {"id":"400006","selection":"1"}, // マッド系をキルできる : オン
+        {"id":"400007","selection":"1"}, // 第三陣営をキルできる : オン
+        {"id":"400008","selection":"1"}, // ジャッカルフレンズをキルできる : オン
+        {"id":"400009","selection":"0"}, // ラバーズをキルできる : オフ
+        {"id":"400010","selection":"0"}, // クラードをキルできる : オフ
+
+        {"id":"400700","selection":"10"}, // メイヤー : 100%
+        {"id":"400701","selection":"0"}, // 人数 : 1
+        {"id":"400702","selection":"2"}, // メイヤーの票数 : 3
+
+        {"id":"600502","selection":"1"},  // 第三キル人外入り : オン
+        {"id":"600511","selection":"1"} // ジャッカル入り : オン
+      ]
     }
   ]
 }
