[ジャッカル村 (サイドキック) \n推奨:14~15人] 追加

--- a/Description.jsonc
+++ b/Description.jsonc
@@ -292,6 +292,76 @@
         {"id":"600511","selection":"1"}, // ジャッカル入り : オン
         {"id":"600512","selection":"1"} // SK有 : オン
       ]
+    },
+    {
+      "title":"ジャッカル村 (サイドキック) \n推奨:14~15人",
+      "MeetingButtonNum":"1",
+      "MeetingButtonCooldown":"15",
+      "VoteTime":"210",
+      "PlayerSpeed":"1.25",
+      "CrewVision":"0.5",
+      "ImpostorVision":"1.75",
+      "KillCoolTime":"30",
+      "CommonTask":"2",
+      "LongTask":"3",
+      "ShortTask":"6",
+      "ModOptions":[
+        {"id":"100200","selection":"0"}, // インポスター役職人数 : 0
+        {"id":"100300","selection":"1"}, // 第三陣営役職人数 : 1
+        {"id":"100400","selection":"3"}, // クルーメイト役職人数 : 3
+        {"id":"100500","selection":"0"}, // インポスター幽霊役職人数 : 0
+        {"id":"100600","selection":"0"}, // 第三陣営幽霊役職人数 : 0
+        {"id":"100700","selection":"0"}, // クルーメイト幽霊役職人数 : 0
+
+        {"id":"100900","selection":"1"}, // PC以外をキックする : オン
+        {"id":"101000","selection":"0"}, // アガルタ : オフ
+        {"id":"101200","selection":"0"}, // モード設定 : オフ
+        {"id":"101300","selection":"1"}, // モード : SuperHostRoles
+
+        {"id":"300000","selection":"10"}, // ジャッカル : 100%
+        {"id":"300001","selection":"0"}, // 人数 : 1
+        {"id":"300002","selection":"11"}, // ジャッカルのキルクールタイム : 30
+        {"id":"300003","selection":"1"}, // ベントを使える : オン
+        {"id":"300004","selection":"0"}, // サボタージュが使える : オフ
+        {"id":"300005","selection":"1"}, // インポスターの視界 : オン
+        {"id":"300006","selection":"0"}, // ジャッカルフレンズを作れる : オフ
+        {"id":"300007","selection":"1"}, // ジャッカルがサイドキックを作れる : オン
+        {"id":"300008","selection":"11"}, // サイドキックのクールタイム : 30
+        {"id":"300009","selection":"0"}, // 新ジャッカルがサイドキックを作れる : オフ
+
+        {"id":"400000","selection":"10"}, // シェリフ : 100%
+        {"id":"400001","selection":"0"}, // 人数 : 1
+        {"id":"400002","selection":"11"}, // キルクールタイム : 30
+        {"id":"400003","selection":"4"}, // 最大キル数 : 5
+        {"id":"400004","selection":"0"}, // 誤射した時も対象を殺す : オフ
+        {"id":"400005","selection":"1"}, // インポスターをキルできる : オン
+        {"id":"400006","selection":"1"}, // マッド系をキルできる : オン
+        {"id":"400007","selection":"1"}, // 第三陣営をキルできる : オン
+        {"id":"400008","selection":"1"}, // ジャッカルフレンズをキルできる : オン
+        {"id":"400009","selection":"0"}, // ラバーズをキルできる : オフ
+        {"id":"400010","selection":"0"}, // クラードをキルできる : オフ
+
+        {"id":"400700","selection":"10"}, // メイヤー : 100%
+        {"id":"400701","selection":"0"}, // 人数 : 1
+        {"id":"400702","selection":"2"}, // メイヤーの票数 : 3
+
+        {"id":"406100","selection":"10"}, // 警察医 : 100%
+        {"id":"406101","selection":"0"}, // 人数 : 1
+        {"id":"406102","selection":"1"}, // タスクフェイズ中に携帯バイタルを所持しているか。 : オン
+        {"id":"406103","selection":"2"}, // バイタル画面クールダウン : 15
+        {"id":"406104","selection":"0"}, // 充電持続時間 : 5
+        {"id":"406105","selection":"1"}, // 死体検案書の再送を可能にするか。 : オン
+        {"id":"406106","selection":"1"}, // 死亡したターンの会議フェイズ終了後も、死亡時刻を表記するか。 : オン
+        {"id":"406107","selection":"1"}, // 会議フェイズ中その死者が何ターン前に死亡したかを表示するか。 : オン
+        {"id":"406108","selection":"1"}, // 中華民国歴表記にするか : オン
+        {"id":"406109","selection":"1"}, // 死亡時刻に誤差を含めるか。 : オン
+        {"id":"406110","selection":"9"}, // 死亡時刻に含める誤差の範囲(絶対値)。 : 10
+
+        {"id":"600502","selection":"1"},  // 第三キル人外入り : オン
+        {"id":"600511","selection":"1"}, // ジャッカル入り : オン
+        {"id":"600512","selection":"1"}, // SK有 : オン
+        {"id":"600513","selection":"1"} // キル役職系SK有 : オン
+      ]
     }
   ]
 }
