[シェリマ村 (マッドロールランダム) \nSHR対応_推奨11人]を追加

--- a/Description.jsonc
+++ b/Description.jsonc
@@ -20,6 +20,13 @@
         {"id":"100600","selection":"0"}, // 第三陣営幽霊役職人数 : 0
         {"id":"100700","selection":"0"}, // クルーメイト幽霊役職人数 : 0
 
+        {"id":"101900","selection":"1"}, // マップの設定 : オン
+        {"id":"102400","selection":"0"}, // ベントアニメーション有効化 : オフ
+
+        {"id":"102800","selection":"1"}, // マップ改造 : オン
+        {"id":"103200","selection":"1"}, // Airship : オン
+        {"id":"103208","selection":"1"}, // 壁越しにタスクをできない : オン
+
         {"id":"100900","selection":"1"}, // PC以外をキックする : オン
         {"id":"101000","selection":"0"}, // アガルタ : オフ
         {"id":"101200","selection":"0"}, // モード設定 : オフ
@@ -60,6 +67,11 @@
         {"id":"102101","selection":"0"}, // アドミンが使える : オフ
         {"id":"102103","selection":"1"}, // バイタル・ドアログが使える : オン
         {"id":"102104","selection":"1"}, // カメラが使える : オン
+        {"id":"102400","selection":"0"}, // ベントアニメーション有効化 : オフ
+
+        {"id":"102800","selection":"1"}, // マップ改造 : オン
+        {"id":"103200","selection":"1"}, // Airship : オン
+        {"id":"103208","selection":"1"}, // 壁越しにタスクをできない : オン
 
         {"id":"400000","selection":"10"}, // シェリフ : 100%
         {"id":"400001","selection":"0"}, // 人数 : 1
@@ -90,7 +102,7 @@
       ]
     },
     {
-      "title":"吊り意識向上 [ シェリマ (マッドてるてる) ]\nSHR対応_推奨11人",
+      "title":"シェリマ村 (吊り意識向上_マッドてるてる)\nSHR対応_推奨11人",
       "MeetingButtonNum":"1",
       "MeetingButtonCooldown":"15",
       "VoteTime":"180",
@@ -120,6 +132,11 @@
         {"id":"102101","selection":"0"}, // アドミンが使える : オフ
         {"id":"102103","selection":"1"}, // バイタル・ドアログが使える : オン
         {"id":"102104","selection":"1"}, // カメラが使える : オン
+        {"id":"102400","selection":"0"}, // ベントアニメーション有効化 : オフ
+
+        {"id":"102800","selection":"1"}, // マップ改造 : オン
+        {"id":"103200","selection":"1"}, // Airship : オン
+        {"id":"103208","selection":"1"}, // 壁越しにタスクをできない : オン
 
         {"id":"201100","selection":"10"}, // シリアルキラー : 100%
         {"id":"201101","selection":"0"}, // 人数 : 1
@@ -169,6 +186,141 @@
       ]
     },
     {
+      "title":"シェリマ村 (マッドロールランダム)\nSHR対応_推奨11人",
+      "MeetingButtonNum":"1",
+      "MeetingButtonCooldown":"15",
+      "VoteTime":"180",
+      "PlayerSpeed":"1.25",
+      "CrewVision":"0.5",
+      "ImpostorVision":"1.75",
+      "KillCoolTime":"30",
+      "CommonTask":"2",
+      "LongTask":"3",
+      "ShortTask":"6",
+      "ModOptions":[
+        {"id":"100200","selection":"0"}, // インポスター役職人数 : 0
+        {"id":"100300","selection":"0"}, // 第三陣営役職人数 : 0
+        {"id":"100400","selection":"2"}, // クルーメイト役職人数 : 2
+        {"id":"100500","selection":"0"}, // インポスター幽霊役職人数 : 0
+        {"id":"100600","selection":"0"}, // 第三陣営幽霊役職人数 : 0
+        {"id":"100700","selection":"0"}, // クルーメイト幽霊役職人数 : 0
+
+        {"id":"100900","selection":"0"}, // PC以外をキックする : オフ
+        {"id":"101000","selection":"0"}, // アガルタ : オフ
+        {"id":"101200","selection":"1"}, // モード設定 : オン
+        {"id":"101300","selection":"1"}, // モード : SuperHostRoles
+
+        {"id":"101900","selection":"1"}, // マップの設定 : オン
+        {"id":"102000","selection":"1"}, // 情報機器制限の設定 : オン
+        {"id":"102100","selection":"1"}, // 使用可能/不可能 の設定 : オン
+        {"id":"102101","selection":"0"}, // アドミンが使える : オフ
+        {"id":"102103","selection":"1"}, // バイタル・ドアログが使える : オン
+        {"id":"102104","selection":"1"}, // カメラが使える : オン
+        {"id":"102400","selection":"0"}, // ベントアニメーション有効化 : オフ
+
+        {"id":"102800","selection":"1"}, // マップ改造 : オン
+        {"id":"103200","selection":"1"}, // Airship : オン
+        {"id":"103208","selection":"1"}, // 壁越しにタスクをできない : オン
+
+        {"id":"400000","selection":"10"}, // シェリフ : 100%
+        {"id":"400001","selection":"0"}, // 人数 : 1
+        {"id":"400002","selection":"11"}, // キルクールタイム : 30
+        {"id":"400003","selection":"2"}, // 最大キル数 : 3
+        {"id":"400004","selection":"0"}, // 誤射した時も対象を殺す : オフ
+        {"id":"400005","selection":"1"}, // インポスターをキルできる : オン
+        {"id":"400006","selection":"1"}, // マッド系をキルできる : オン
+        {"id":"400007","selection":"1"}, // 第三陣営をキルできる : オン
+        {"id":"400008","selection":"1"}, // ジャッカルフレンズをキルできる : オン
+        {"id":"400009","selection":"0"}, // ラバーズをキルできる : オフ
+        {"id":"400010","selection":"0"}, // クラードをキルできる : オフ
+
+        {"id":"400900","selection":"9"}, // マッドメイト : 90%
+        {"id":"400901","selection":"0"}, // 人数 : 1
+        {"id":"400902","selection":"1"}, // 狂信能力を有するか : オン
+        {"id":"400903","selection":"1"}, // 能力発動に必要なタスク数を固有で設定するか : オン
+        {"id":"400904","selection":"2"}, // 通常タスク : 2
+        {"id":"400905","selection":"7"}, // ロングタスク : 7
+        {"id":"400906","selection":"3"}, // ショートタスク : 3
+        {"id":"400907","selection":"1"}, // 能力発動に必要なタスク数を総タスク数に対する割合にするか : オン
+        {"id":"400908","selection":"1"}, // 能力が発動するタスク量(全タスクに対する割合) : 25%
+        {"id":"400909","selection":"1"}, // ベントに入れる : オン
+        {"id":"400910","selection":"1"}, // インポスターの視界 : オン
+
+        {"id":"401000","selection":"9"}, // 黒猫 : 90%
+        {"id":"401001","selection":"0"}, // 人数 : 1
+        {"id":"401002","selection":"1"}, // インポスターを道連れにしない : オン
+        {"id":"401003","selection":"1"}, // 狂信能力を有するか : オン
+        {"id":"401004","selection":"1"}, // 能力発動に必要なタスク数を固有で設定するか : オン
+        {"id":"401005","selection":"2"}, // 通常タスク : 2
+        {"id":"401006","selection":"7"}, // ロングタスク : 7
+        {"id":"401007","selection":"3"}, // ショートタスク : 3
+        {"id":"401008","selection":"1"}, // 能力発動に必要なタスク数を総タスク数に対する割合にするか : オン
+        {"id":"401009","selection":"1"}, // 能力が発動するタスク量(全タスクに対する割合) : 25%
+        {"id":"401010","selection":"1"}, // ベントに入れる : オン
+        {"id":"401011","selection":"1"}, // インポスターの視界 : オン
+
+        {"id":"401100","selection":"9"}, // 崇拝者 : 90%
+        {"id":"401101","selection":"0"}, // 人数 : 1
+        {"id":"401102","selection":"12"}, // アビリティボタンによる自決のクールタイム設定 : 30
+        {"id":"401103","selection":"11"}, // キルボタンによる自決のクールタイム設定 : 30
+        {"id":"401104","selection":"1"}, // ベントに入れる : オン
+        {"id":"401105","selection":"1"}, // インポスターの視界 : オン
+        {"id":"401106","selection":"1"}, // 狂信能力を有するか : オン
+        {"id":"401107","selection":"1"}, // 能力発動に必要なタスク数を固有で設定するか : オン
+        {"id":"401108","selection":"2"}, // 通常タスク : 2
+        {"id":"401109","selection":"7"}, // ロングタスク : 7
+        {"id":"401110","selection":"3"}, // ショートタスク : 3
+        {"id":"401111","selection":"1"}, // 能力発動に必要なタスク数を総タスク数に対する割合にするか : オン
+        {"id":"401112","selection":"1"}, // 能力が発動するタスク量(全タスクに対する割合) : 25%
+
+        {"id":"406200","selection":"9"}, // 化け狸 : 90%
+        {"id":"406201","selection":"0"}, // 人数 : 1
+        {"id":"406202","selection":"1"}, // ベントに入れる : オン
+        {"id":"406203","selection":"1"}, // インポスターの視界 : オン
+        {"id":"406204","selection":"1"}, // 狂信能力を有するか : オン
+        {"id":"406205","selection":"1"}, // 能力発動に必要なタスク数を固有で設定するか : オン
+        {"id":"406206","selection":"2"}, // 通常タスク : 2
+        {"id":"406207","selection":"7"}, // ロングタスク : 7
+        {"id":"406208","selection":"3"}, // ショートタスク : 3
+        {"id":"406209","selection":"1"}, // 能力発動に必要なタスク数を総タスク数に対する割合にするか : オン
+        {"id":"406210","selection":"1"}, // 能力が発動するタスク量(全タスクに対する割合) : 25%
+        {"id":"406211","selection":"2"}, // シェイプシフトのクールタイム : 10
+        {"id":"406212","selection":"6"}, // シェイプシフトの持続時間 : 30
+
+        {"id":"401300","selection":"9"}, // マッドシーア : 90%
+        {"id":"401301","selection":"0"}, // 人数 : 1
+        {"id":"401302","selection":"0"}, // モード : 死の点滅 & 霊魂が見える
+        {"id":"401303","selection":"0"}, // 時間経過で霊魂が消える : オフ
+        {"id":"401304","selection":"3"}, // 霊魂が見える時間 : 15
+        {"id":"401305","selection":"1"}, // ベントに入れる : オン
+        {"id":"401306","selection":"1"}, // インポスターの視界 : オン
+        {"id":"401307","selection":"1"}, // 狂信能力を有するか : オン
+        {"id":"401308","selection":"1"}, // 能力発動に必要なタスク数を固有で設定するか : オン
+        {"id":"401309","selection":"2"}, // 通常タスク : 2
+        {"id":"401310","selection":"7"}, // ロングタスク : 7
+        {"id":"401311","selection":"3"}, // ショートタスク : 3
+        {"id":"401312","selection":"1"}, // 能力発動に必要なタスク数を総タスク数に対する割合にするか : オン
+        {"id":"401313","selection":"1"}, // 能力が発動するタスク量(全タスクに対する割合) : 25%
+
+        {"id":"401600","selection":"9"}, // マッドホーク : 90%
+        {"id":"401601","selection":"0"}, // 人数 : 1
+        {"id":"401602","selection":"6"}, // クールタイム : 15
+        {"id":"401603","selection":"10"}, // 継続時間 : 5
+        {"id":"401604","selection":"1"}, // 狂信能力を有するか : オン
+        {"id":"401605","selection":"1"}, // 能力発動に必要なタスク数を固有で設定するか : オン
+        {"id":"401606","selection":"2"}, // 通常タスク : 2
+        {"id":"401607","selection":"7"}, // ロングタスク : 7
+        {"id":"401608","selection":"3"}, // ショートタスク : 3
+        {"id":"401609","selection":"1"}, // 能力発動に必要なタスク数を総タスク数に対する割合にするか : オン
+        {"id":"401610","selection":"1"}, // 能力が発動するタスク量(全タスクに対する割合) : 25%
+        {"id":"401611","selection":"1"}, // ベントに入れる : オン
+        {"id":"401612","selection":"1"}, // インポスターの視界 : オン
+
+        {"id":"600501","selection":"1"}, // シェリマ : オン
+        {"id":"600601","selection":"1"} // アドミン禁止 : オン
+      ]
+    },
+    {
       "title":"ジャッカル村 (シンプル) \nSHR対応_推奨:12人",
       "MeetingButtonNum":"1",
       "MeetingButtonCooldown":"15",
@@ -192,6 +344,13 @@
         {"id":"101000","selection":"0"}, // アガルタ : オフ
         {"id":"101200","selection":"1"}, // モード設定 : オン
         {"id":"101300","selection":"1"}, // モード : SuperHostRoles
+
+        {"id":"101900","selection":"1"}, // マップの設定 : オン
+        {"id":"102400","selection":"0"}, // ベントアニメーション有効化 : オフ
+
+        {"id":"102800","selection":"1"}, // マップ改造 : オン
+        {"id":"103200","selection":"1"}, // Airship : オン
+        {"id":"103208","selection":"1"}, // 壁越しにタスクをできない : オン
 
         {"id":"300000","selection":"10"}, // ジャッカル : 100%
         {"id":"300001","selection":"0"}, // 人数 : 1
@@ -248,6 +407,13 @@
         {"id":"101000","selection":"0"}, // アガルタ : オフ
         {"id":"101200","selection":"1"}, // モード設定 : オン
         {"id":"101300","selection":"1"}, // モード : SuperHostRoles
+
+        {"id":"101900","selection":"1"}, // マップの設定 : オン
+        {"id":"102400","selection":"0"}, // ベントアニメーション有効化 : オフ
+
+        {"id":"102800","selection":"1"}, // マップ改造 : オン
+        {"id":"103200","selection":"1"}, // Airship : オン
+        {"id":"103208","selection":"1"}, // 壁越しにタスクをできない : オン
 
         {"id":"300000","selection":"10"}, // ジャッカル : 100%
         {"id":"300001","selection":"0"}, // 人数 : 1
@@ -317,6 +483,13 @@
         {"id":"101000","selection":"0"}, // アガルタ : オフ
         {"id":"101200","selection":"0"}, // モード設定 : オフ
         {"id":"101300","selection":"1"}, // モード : SuperHostRoles
+
+        {"id":"101900","selection":"1"}, // マップの設定 : オン
+        {"id":"102400","selection":"0"}, // ベントアニメーション有効化 : オフ
+
+        {"id":"102800","selection":"1"}, // マップ改造 : オン
+        {"id":"103200","selection":"1"}, // Airship : オン
+        {"id":"103208","selection":"1"}, // 壁越しにタスクをできない : オン
 
         {"id":"300000","selection":"10"}, // ジャッカル : 100%
         {"id":"300001","selection":"0"}, // 人数 : 1
