--- a/Description.jsonc
+++ b/Description.jsonc
@@ -112,6 +112,111 @@
       ]
     },
     {
+      "title":"シェリマ村 (黒猫 + イビルハッカー) \n推奨11人",
+      "NumImpostors":"2", // インポスター数
+      "MeetingButtonNum":"1",
+      "MeetingButtonCooldown":"20",
+      "DiscussionTime":"0",
+      "VoteTime":"180", // 本来の設定は150s, 流石に短いと判断した為通常シェリマの秒数にそろえた
+      "PlayerSpeed":"1.25",
+      "CrewVision":"0.5",
+      "ImpostorVision":"1.5",
+      "KillCoolTime":"30",
+      "CommonTask":"2",
+      "LongTask":"3",
+      "ShortTask":"5",
+      "ConfirmImpostor":"false", // 追放を確認 : [ ]
+      "AnonymousVotes":"true", // 匿名投票 : [x]
+      "VisualTasks":"false", // 視認タスク : [ ]
+      "ModOptions":[
+        {"id":"100200","selection":"5"}, // インポスター役職人数 : 5
+        {"id":"100300","selection":"5"}, // 第三陣営役職人数 : 5
+        {"id":"100400","selection":"5"}, // クルーメイト役職人数 : 5
+        {"id":"100500","selection":"5"}, // インポスター幽霊役職人数 : 5
+        {"id":"100600","selection":"5"}, // 第三陣営幽霊役職人数 : 5
+        {"id":"100700","selection":"5"}, // クルーメイト幽霊役職人数 : 5
+
+        {"id":"100900","selection":"1"}, // PC以外をキックする : オン
+        {"id":"101000","selection":"0"}, // アガルタ : オフ
+        {"id":"101200","selection":"0"}, // モード設定 : オフ
+        {"id":"101300","selection":"1"}, // モード : SuperHostRoles
+
+        {"id":"101900","selection":"1"}, // マップの設定 : オン
+        {"id":"102000","selection":"1"}, // 情報機器制限の設定 : オン
+
+        {"id":"102100","selection":"0"}, // 使用可能/不可能の設定 : オフ
+
+        {"id":"102200","selection":"1"}, // 時間制限の設定 : オン
+        {"id":"102201","selection":"1"}, // アドミンの時間制限 : オン
+        {"id":"102202","selection":"3"}, // 使用可能時間 : 3
+        {"id":"102203","selection":"1"}, // バイタルの時間制限 : オン
+        {"id":"102204","selection":"10"}, // 使用可能時間 : 10
+        {"id":"102205","selection":"1"}, // カメラの時間制限 : オン
+        {"id":"102206","selection":"10"}, // 使用可能時間 : 10
+
+        {"id":"102300","selection":"1"}, // リアクター継続時間の設定 : オン
+        {"id":"102303","selection":"60"}, // エアーシップでのリアアクター時間 : 60
+
+        {"id":"102400","selection":"0"}, // ベントアニメーション有効化 : オフ
+
+        {"id":"102500","selection":"1"}, // 配線タスクランダム : オン
+        {"id":"102501","selection":"2"}, // 配線タスク数 : 3
+
+        {"id":"102800","selection":"1"}, // マップ改造 : オン
+
+        {"id":"103200","selection":"1"}, // Airship : オン
+        {"id":"103201","selection":"1"}, // ランダムスポーン : オン
+        {"id":"103205","selection":"1"}, // アーカイブのアドミンを使用不可にする : オン
+        {"id":"103208","selection":"1"}, // 壁越しにタスクをできない : オン
+
+        {"id":"103500","selection":"1"}, // ゲームオプション : オン
+
+        {"id":"103600","selection":"1"}, // 死亡時に他プレイヤーの役職を表示しない : オン
+        {"id":"103601","selection":"1"}, // インポスターは死亡時に他プレイヤーの役職を表示する : オン
+
+        {"id":"104200","selection":"0"}, // 死後のズーム機能 : オフ
+
+        {"id":"200300","selection":"10"}, // イビルハッカー : 100%
+        {"id":"200301","selection":"0"}, // 人数 : 1
+        {"id":"200302","selection":"1"}, // アドミン使用中に移動できる : オン
+        {"id":"200304","selection":"0"}, // マッドメイトを作れる : オフ
+
+        {"id":"400000","selection":"10"}, // シェリフ : 100%
+        {"id":"400001","selection":"0"}, // 人数 : 1
+        {"id":"400002","selection":"11"}, // キルクールタイム : 30
+        {"id":"400003","selection":"0"}, // 最大キル数 : 1
+        {"id":"400004","selection":"0"}, // 誤射した時も対象を殺す : オフ
+        {"id":"400005","selection":"1"}, // インポスターをキルできる : オン
+        {"id":"400006","selection":"1"}, // マッド系をキルできる : オン
+        {"id":"400007","selection":"1"}, // 第三陣営をキルできる : オン
+        {"id":"400008","selection":"1"}, // ジャッカルフレンズをキルできる : オン
+        {"id":"400009","selection":"0"}, // ラバーズをキルできる : オフ
+        {"id":"400010","selection":"0"}, // クラードをキルできる : オフ
+
+        {"id":"401000","selection":"9"}, // 黒猫 : 90%
+        {"id":"401001","selection":"0"}, // 人数 : 1
+        {"id":"401002","selection":"1"}, // インポスターを道連れにしない : オン
+        {"id":"401003","selection":"1"}, // 狂信能力を有するか : オン
+        {"id":"401004","selection":"1"}, // 能力発動に必要なタスク数を固有で設定するか : オン
+        {"id":"401005","selection":"0"}, // 通常タスク : 0
+        {"id":"401006","selection":"1"}, // ロングタスク : 1
+        {"id":"401007","selection":"0"}, // ショートタスク : 0
+        {"id":"401008","selection":"1"}, // 能力発動に必要なタスク数を総タスク数に対する割合にするか : オン
+        {"id":"401009","selection":"4"}, // 能力が発動するタスク量(全タスクに対する割合) : 100%
+        {"id":"401010","selection":"1"}, // ベントに入れる : オン
+        {"id":"401011","selection":"1"}, // インポスターの視界 : オン
+
+        {"id":"500002","selection":"1"}, // マッド役職がベント移動できる : オン
+
+        {"id":"600500","selection":"1"}, // シェリマ (黒猫 + イビルハッカー) : オン
+        {"id":"600501","selection":"1"}, // シェリマ : オン
+        {"id":"600600","selection":"1"}, // アドミン使用制限 : オン
+        {"id":"600602","selection":"1"}, // アーカイブアドミン禁止 : オン
+        {"id":"600604","selection":"1"}, // バイタル使用制限 : オン
+        {"id":"600606","selection":"1"} // カメラ使用制限 : オン
+      ]
+    },
+    {
       "title":"シェリマ村 (吊り意識向上_マッドてるてる)\nSHR対応_推奨11人",
       "NumImpostors":"2",
       "MeetingButtonNum":"1",
