[ハッチャンコラボ役村\n推奨:12人]追加

--- a/Description.jsonc
+++ b/Description.jsonc
@@ -675,6 +675,78 @@
         {"id":"600512","selection":"1"}, // SK有 : オン
         {"id":"600513","selection":"1"} // キル役職系SK有 : オン
       ]
+    },
+    {
+      "title":"ハッチャンコラボ役村\n推奨:12人",
+      "NumImpostors":"2", // インポスター数
+      "MeetingButtonNum":"1",
+      "MeetingButtonCooldown":"15",
+      "DiscussionTime":"0",
+      "VoteTime":"180",
+      "PlayerSpeed":"1.25",
+      "CrewVision":"0.5",
+      "ImpostorVision":"1.75",
+      "KillCoolTime":"30",
+      "CommonTask":"2",
+      "LongTask":"3",
+      "ShortTask":"5",
+      "ConfirmImpostor":"false", // 追放を確認 : [ ]
+      "AnonymousVotes":"true", // 匿名投票 : [x]
+      "VisualTasks":"false", // 視認タスク : [ ]
+      "ModOptions":[
+        {"id":"100200","selection":"2"}, // インポスター役職人数 : 2
+        {"id":"100300","selection":"1"}, // 第三陣営役職人数 : 1
+        {"id":"100400","selection":"2"}, // クルーメイト役職人数 : 2
+        {"id":"100500","selection":"0"}, // インポスター幽霊役職人数 : 0
+        {"id":"100600","selection":"0"}, // 第三陣営幽霊役職人数 : 0
+        {"id":"100700","selection":"0"}, // クルーメイト幽霊役職人数 : 0
+
+        {"id":"100900","selection":"1"}, // PC以外をキックする : オン
+        {"id":"101000","selection":"0"}, // アガルタ : オフ
+        {"id":"101200","selection":"0"}, // モード設定 : オフ
+        {"id":"101300","selection":"1"}, // モード : SuperHostRoles
+
+        {"id":"200100","selection":"10"}, // スラッガー : 100%
+        {"id":"200101","selection":"0"}, // 人数 : 1
+        {"id":"200102","selection":"6"}, // チャージ時間 : 3
+        {"id":"200103","selection":"10"}, // クールタイム : 27.5
+        {"id":"200104","selection":"0"}, // 範囲キル可能 : オフ
+        {"id":"200105","selection":"1"}, // 通常キルとクールタイムを同期 : オン
+
+        {"id":"200600","selection":"10"}, // ペンギン : 100%
+        {"id":"200601","selection":"0"}, // 人数 : 1
+        {"id":"200602","selection":"11"}, // クールタイム : 30
+        {"id":"200603","selection":"3"}, // 継続時間 : 10
+        {"id":"200604","selection":"0"}, // 通常キルができる : オフ
+        {"id":"200605","selection":"1"}, // 能力発動中に会議が始まった場合キルをする : オン
+
+        {"id":"300100","selection":"10"}, // 波動砲ジャッカル : 100%
+        {"id":"300101","selection":"0"}, // 人数 : 1
+        {"id":"300102","selection":"10"}, // クールタイム : 27.5
+        {"id":"300103","selection":"5"}, // チャージ時間 : 3
+        {"id":"300104","selection":"11"}, // ジャッカルのクールタイム : 30
+        {"id":"300105","selection":"1"}, // ベントを使える : オン
+        {"id":"300106","selection":"1"}, // インポスターの視界 : オン
+        {"id":"300107","selection":"0"}, // サボタージュが使える : オフ
+        {"id":"300108","selection":"1"}, // 通常キルとクールタイムを同期 : オン
+        {"id":"300109","selection":"0"}, // ジャッカルがサイドキックを作れる : オフ
+        {"id":"300110","selection":"11"}, // サイドキックのクールタイム : 30
+        {"id":"300111","selection":"0"}, // 新ジャッカルがサイドキックを作れる : オフ
+        {"id":"300112","selection":"0"}, // サイドキック昇格時、波動砲を受け継ぐか。 : オフ
+        {"id":"300113","selection":"0"}, // ジャッカルフレンズを作れる : オフ
+
+        {"id":"400500","selection":"10"}, // 賢者 : 100%
+        {"id":"400501","selection":"0"}, // 人数 : 1
+        {"id":"400502","selection":"11"}, // クールタイム : 30
+        {"id":"400503","selection":"3"}, // 継続時間 : 10
+
+        {"id":"400600","selection":"10"}, // 天秤 : 100%
+        {"id":"400601","selection":"0"}, // 人数 : 1
+        {"id":"400602","selection":"12"}, // 天秤の投票時間 : 30
+
+        {"id":"600502","selection":"1"}, //  第三キル人外入り : オン
+        {"id":"600511","selection":"1"} // ジャッカル入り : オン
+      ]
     }
   ]
 }
